# spotyt

./: .gitignore  Procedure.md  README.md  Spot.py  SpotYt.py  SpotYt_V0.1.py  app.py  merged.py  play_ret.py  pyproject.toml  simple.py  spotUser.py  spotYt.py
routes/: auth.py  playlist.py
static/css/: styles.css
static/js/: scripts.js
templates/: base.html  index.html
utils/: spotify_utils.py  youtube_utils.py
